--- a/_config.yml
+++ b/_config.yml
@@ -4,17 +4,17 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "flexton.netlify.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author
-author-name:    Clayton Hanson
+author-name:    Hyemi
 author-image:   1.jpg
-author-job:     Web Developer
-author-email:   your-email@domain.com # Add your email for contant form.
+author-job:     Student
+author-email:   ask0914d@gmail.com # Add your email for contant form.
 author-twitter: artemsheludko_ # Add your twitter account
-about-author:   I am a web developer focusing on front-end development. Always hungry to keep learning.
+about-author:   I am studying statistics and computer science.
 
 # Social settings
 social-twitter:   artemsheludko_
 social-facebook:
-social-github:    artemsheludko
+social-github:    hyemi0914
 social-pinterest: artemsheludko
 social-instagram: artemsheludko_
 social-youtube:
