--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "flexton.netlify.com" # the base hostname & protocol for your site, e.g. ht
 
 # Author
 author-name:    Hyemi
-author-image:   1.jpg
+author-image:   image.jpg
 author-job:     Student
 author-email:   ask0914d@gmail.com # Add your email for contant form.
 author-twitter: artemsheludko_ # Add your twitter account
